# RC-Race-Engineer

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
_evidence.HOLD-20250917-015412/20250916-221439-10.211.55.12-web/: firewall-selinux-10.211.55.12-web.txt
_evidence/20250916-220425-10.211.55.12-web/: firewall-selinux-10.211.55.12-web.txt
_evidence/20250916-220513-rcraceengineer/: firewall-selinux-rcraceengineer.txt
_evidence/20250916-220757-10.211.55.12-web/: firewall-selinux-10.211.55.12-web.txt
context-lab/: .gitignore  Makefile  README.md  ctx.yaml  pyproject.toml
context-lab/data/raw/: sample.md
context-lab/scripts/: context-engineering-setup.sh  git_ssh_fix.sh
context-lab/src/contextlab/: __init__.py  assembler.py  cli.py  cli.py.bck  config.py  doctor.py  embeddings.py  llm.py  llm.py.bck  memory.py  scraper.py  sqlite_compat.py  store.py  store.py.old  store.py.old.older  store_numpy.py  tokenizer.py
context-lab/src/contextlab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
context-lab/templates/: fewshot.jsonl  rules.md  scrape-allowlist.txt  system.txt
docs/: ROADMAP.md  build-log.md  design-principles.md  domain-model.md  ux-principles.md  vm-operations-checklist.md
prisma/: schema.prisma  seed.ts
scripts/: capture-fw-selinux.sh  db-sync.sh
web/: .env.example  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
(+98 files in other folders)
